--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,9 +1,15 @@
 <div>
-    <p>
-       datos
-    </p>
-    <p>mama</p>
+    <ul>
+        {{#each products}}
+            <li>
+                <strong>Title:</strong> {{title}}<br>
+                <strong>Description:</strong> {{description}}<br>
+                <strong>Code:</strong> {{code}}<br>
+                <strong>Price:</strong> {{price}}<br>
+                <strong>Stock:</strong> {{stock}}<br>
+                <strong>Category:</strong> {{category}}<br>
+                <strong>Thumbnails:</strong> {{thumbnails}}<br>
+            </li> <br>
+        {{/each}}
+    </ul>
 </div>
-
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
